--- a/module/Backend/view/backend/properties/index.phtml
+++ b/module/Backend/view/backend/properties/index.phtml
@@ -67,7 +67,7 @@ $arrUserList = $this->arrUserList;
 
                                 <?php endforeach; ?>
                             <?php else: ?>
-                                <tr><td colspan="6" class="text-center">Hiện tại chưa có danh mục nào.</td></tr>
+                                <tr><td colspan="6" class="text-center">Hiện tại chưa có nhu cầu rao vặt nào cả.</td></tr>
                             <?php endif; ?>
                         </tbody>
                     </table>
@@ -80,5 +80,5 @@ $arrUserList = $this->arrUserList;
     </section>
 </section>
 <script type="text/javascript">
-    Category.index();
+    Properties.index();
 </script>
