--- a/module/Backend/view/backend/category/add.phtml
+++ b/module/Backend/view/backend/category/add.phtml
@@ -1,5 +1,6 @@
 <?php
 $arrParentList = $this->arrParentList;
+$arrPropertiesList = $this->arrPropertiesList;
 ?>
 <section class="wrapper site-min-height">
 
@@ -70,6 +71,23 @@ $arrParentList = $this->arrParentList;
                     </div>
                 </div>
 
+                <div class="form-group select-prop">
+                    <label class="col-lg-2 col-sm-2 control-label" for="cate_icon">Chọn nhóm nhu cầu cho danh mục</label>
+                    <div class="col-lg-5">
+                        <select name="parent_id" class="form-control parent_id">
+                            <option value="0" <?php if (empty($this->params['parent_id'])): ?> selected="selected"<?php endif; ?>>Vui lòng chọn danh mục cha</option>
+                            <?php
+                            if (!empty($arrPropertiesList)):
+                                foreach ($arrPropertiesList as $arrProperties):
+                                    ?>
+                                    <option value="<?php echo $arrProperties['prop_id']; ?>" <?php echo (!empty($this->params['prop_id']) && $this->params['prop_id'] == $arrProperties['prop_id']) ? 'selected' : ''; ?>><?php echo $arrProperties['prop_name']; ?></option>
+                                    <?php
+                                endforeach;
+                            endif;
+                            ?>
+                        </select>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <label class="col-lg-2 col-sm-2 control-label" for="cate_sort">Sắp xếp</label>
