update code from laptop

--- a/module/Frontend/view/v1/frontend/content/add.phtml
+++ b/module/Frontend/view/v1/frontend/content/add.phtml
@@ -13,15 +13,13 @@
 
     <div class="container">
         <section class="wrapper site-min-height">
-            <?php if ($this->errors): ?>
+            <?php if ($this->errors['total']): ?>
                 <div class="alert alert-block alert-danger fade in">
                     <button class="close close-sm" type="button" data-dismiss="alert">
                         <i class="fa fa-times-circle"></i>
                     </button>
                     <h4><i class="fa fa-exclamation-triangle"></i> Lỗi!</h4>
-                    <?php foreach ($this->errors as $error): ?>
-                        <p> - <?php echo $error; ?></p>
-                    <?php endforeach; ?>
+                    <p> - <?php echo $error['total']; ?></p>
                 </div>
             <?php endif; ?>
 
@@ -49,7 +47,9 @@
                                             <form method="post">
                                                 <div class="col-sm-6 input-pad">
                                                     <b>Chọn Danh mục</b>
+                                                    <?php if ($this->errors['category']): ?><p><b class="color-red"><?php echo $this->errors['category']; ?></b></p><?php endif; ?>
                                                     <select class="form-control category" name="category">
+                                                        <option value="0"> Chọn danh mục</option>
                                                         <?php
                                                         $arrCategoryByParent = unserialize(ARR_CATEGORY_BY_PARENT);
                                                         foreach (unserialize(ARR_CATEGORY_PARENT) as $value):
@@ -58,22 +58,32 @@
                                                             <?php
                                                             foreach ($arrCategoryByParent[$value['cate_id']] as $val):
                                                                 ?>
-                                                                <option value="<?php echo $val['cate_id']; ?>" parent="<?php echo $val['cate_parent'] ?>" style="color: #0063DC">&nbsp;&nbsp;&nbsp;&nbsp;&#8627;&nbsp;&nbsp;<?php echo $val['cate_name']; ?></option>
+                                                                <option value="<?php echo $val['cate_id']; ?>" style="color: #0063DC" <?php echo ($params['category'] == $val['cate_id']) ? 'selected' : ''; ?>>&nbsp;&nbsp;&nbsp;&nbsp;&#8627;&nbsp;&nbsp;<?php echo $val['cate_name']; ?></option>
                                                                 <?php
                                                             endforeach;
                                                             ?>
                                                         <?php endforeach; ?>
                                                     </select>
                                                 </div>
-                                                <div class="col-sm-6 padding-control select-properties" style="display: none">
+                                                <div class="col-sm-6 padding-control select-properties" <?php if (empty($this->arrPropertiesList)): ?> style="display: none"<?php endif; ?>>
                                                     <b>Chọn Nhu cầu</b>
                                                     <select class="form-control properties" name="properties">
                                                         <option value="0"> Chọn nhu cầu</option>
+                                                        <?php
+                                                        if (!empty($this->arrPropertiesList)):
+                                                            foreach ($this->arrPropertiesList as $arrProperties):
+                                                                ?>
+                                                                <option value="<?php echo $arrProperties['prop_id'] ?>" <?php echo ($params['properties'] == $arrProperties['prop_id']) ? 'selected' : '' ?>><?php echo $arrProperties['prop_name']; ?></option>
+                                                                <?php
+                                                            endforeach;
+                                                        endif;
+                                                        ?>
                                                     </select>
                                                 </div>
                                                 <div class="col-sm-12 padding-control">
                                                     <b>Nhập tiêu đề cho tin rao vặt</b>
-                                                    <input type="text" class="form-control" name="content_title" />
+                                                    <?php if ($this->errors['content_title']): ?><br/><p><b class="color-red"><?php echo $this->errors['content_title']; ?></b></p><?php endif; ?>
+                                                    <input type="text" class="form-control" name="content_title" value="<?php echo!empty($params['content_title']) ? $params['content_title'] : '' ?>"/>
                                                 </div>
 
                                                 <div class="col-sm-5 padding-control upload_file">
@@ -84,18 +94,70 @@
                                                 </div>
 
                                                 <div class="col-sm-12 padding-control list-image">
+                                                    <?php
+                                                    if (!empty($params['image_prod'])):
+                                                        foreach ($params['image_prod'] as $value):
+                                                            $arrImage = json_decode($value, true);
+                                                            ?>
+                                                            <div class="img-prod">
+                                                                <img class="prod-images" src="<?php echo $arrImage['thumbImage']['150x100']; ?>"><br/>
+                                                                <div class="pull-right">
+                                                                    <a target="_bank" href="<?php echo $arrImage['sourceImage']; ?>" class="tooltips view-images" data-placement="top" data-original-title="Xem"><i class="fa fa-search"></i></a>
+                                                                    <a class="tooltips delete-images" data-placement="top" data-original-title="Xóa"><i class="fa fa-trash-o"></i></a>
+                                                                </div>
+                                                                <input type="hidden" class="main-images" name='image_prod[]' value='<?php echo $value; ?>'/>
+                                                            </div>
+                                                            <?php
+                                                        endforeach;
+                                                    endif;
+                                                    ?>
                                                 </div>
 
                                                 <div class="col-sm-12 padding-control">
-                                                    <b>Nội dung tin rao vặt</b>
-                                                    <textarea class="form-control editor" cols="10" rows="50" name="content_content"></textarea>
+                                                    <p><b>Nội dung tin rao vặt</b></p>
+                                                    <?php if ($this->errors['content_content']): ?><br/><span class="color-red"><b><?php echo $this->errors['content_content']; ?></b></span><?php endif; ?>
+                                                    <textarea class="form-control editor" cols="10" rows="80" name="content_content"><?php echo!empty($params['content_content']) ? $params['content_content'] : '' ?></textarea>
                                                 </div>
 
                                                 <div class="col-sm-12 padding-control">
                                                     <b>Nhập tags cho tin rao vặt</b>
                                                     <input type="text" class="form-control" name="content_tags" />
                                                 </div>
+                                                <?php if (empty(CUSTOMER_ID)): ?>
+                                                    <div class="col-sm-12 padding-control">
+                                                        <h4 class="inner-heading">THÔNG TIN LIÊN HỆ</h4>
+                                                    </div>
+                                                    <?php if (!empty($this->errors['userInfo'])): ?>
+                                                        <div class="col-sm-12 padding-control">
+                                                            <div class="alert alert-block alert-danger fade in">
+                                                                <button class="close close-sm" type="button" data-dismiss="alert">
+                                                                    <i class="fa fa-times-circle"></i>
+                                                                </button>
+                                                                <?php foreach ($this->errors['userInfo'] as $value): ?>
+                                                                    <p> - <?php echo $value; ?></p><br/>
+                                                                <?php endforeach; ?>
+                                                            </div>
+                                                        </div>
+                                                    <?php endif; ?>
+                                                    <div class="col-sm-6 input-pad">
+                                                        <span class="fa fa-cc-visa form-control-feedback"></span>
+                                                        <input class="form-control" type="text" name="name" placeholder="Nhập họ và tên" value='<?php echo empty($params['name']) ? '' : $params['name']; ?>'>
 
+                                                    </div>
+                                                    <div class="col-sm-6 padding-control">
+                                                        <span class="fa fa-google form-control-feedback"></span>
+                                                        <input class="form-control" type="email" name="email" placeholder="Địa chỉ email" value='<?php echo empty($params['email']) ? '' : $params['email']; ?>'>
+                                                    </div>
+                                                    <div class="col-sm-6 input-pad">
+                                                        <span class="fa fa-phone form-control-feedback"></span>
+                                                        <input class="form-control" type="text" name="phone" placeholder="Số điện thoại" value='<?php echo empty($params['phone']) ? '' : $params['phone']; ?>'>
+
+                                                    </div>
+                                                    <div class="col-sm-6 padding-control">
+                                                        <span class="fa fa-barcode form-control-feedback"></span>
+                                                        <input class="form-control" type="password" name="password" placeholder="Nhập mật khẩu để sửa tin khi cần" value='<?php echo empty($params['password']) ? '' : $params['password']; ?>'>
+                                                    </div>
+                                                <?php endif; ?>
                                                 <input type="submit" value="ĐĂNG RAO VẶT">
                                             </form>
                                         </div>
@@ -145,14 +207,15 @@
     </div>
 </section>
 <script>
-    Content.index();
+    Content.add();
     propURL = '<?php echo $this->serverUrl() . $this->Url('getproperties'); ?>';
     UploadURL = '<?php echo $this->serverUrl() . $this->Url('upload', array('controller' => 'product', 'action' => 'upload')); ?>';
     tinymce.init({
         selector: 'textarea',
-        plugins: 'example',
         width: "300",
-        height: "200"
-                //        toolbar: 'example'
+        height: "300",
+        plugins: "image imagetools,textcolor",
+        toolbar: 'fontsizeselect,image,forecolor backcolor',
+        fontsize_formats: '8pt 10pt 12pt 14pt 18pt 24pt 36pt'
     });
 </script>
