--- a/module/Frontend/view/v1/frontend/auth/confirm-reset-password.phtml
+++ b/module/Frontend/view/v1/frontend/auth/confirm-reset-password.phtml
@@ -1,47 +1,101 @@
-<div id="content">
-    <div class="block-head">
-        <?php echo $this->render('frontend/menu');?>
-        <div class="breadcrumb">
-            <div class="item item-end">
-                <div class="ar-right">
-                    <div class="cont">
-                        <a href="<?php echo $this->serverUrl() ?>">Trang chủ</a>
-                    </div>
-                </div>
-            </div>
-            <div class="item  active">
-                <div class="ar-right">
-                    <div class="cont">
-                       Xác nhận Đổi mật khẩu 
-                    </div>
-                </div>
+<section id="page-head">
+    <div class="container">
+        <div class="row col-md-12">
+            <div class="page-heading">
+                <h1>LẤY LẠI MẬT KHẨU </h1>
+                <h4>Xác nhận lấy lại mật khẩu</h4>
             </div>
         </div>
-        <div style="clear: both;"></div>
     </div>
-    <div id="cont-resetpass">
-        <?php if ($this->errors): ?>
-            <div class="alert alert-block alert-danger fade in">
-                <h4><i class="icon-remove-sign"></i> Lỗi!</h4>
-                <?php foreach ($this->errors as $error): ?>
-                    <p> - <?php echo $error; ?></p>
-                <?php endforeach; ?>
+</section><!--end main page heading-->
+<section id="detail">
+    <div class="container">
+        <section class="wrapper site-min-height">
+            <?php if ($this->success): ?>
+                <div class="alert alert-success alert-block fade in">
+                    <button class="close close-sm" type="button" data-dismiss="alert">
+                        <i class="fa fa-times-circle"></i>
+                    </button>
+                    <h4><i class="fa fa-thumbs-o-up"></i> Hoàn tất!</h4>
+                    <p>- <?php echo $this->success; ?></p>
+                </div>
+            <?php endif; ?>
+            <?php if ($this->errors): ?>
+                <div class="alert alert-block alert-danger fade in">
+                    <button class="close close-sm" type="button" data-dismiss="alert">
+                        <i class="fa fa-times-circle"></i>
+                    </button>
+                    <h4><i class="fa fa-exclamation-triangle"></i> Lỗi!</h4>
+                    <?php foreach ($this->errors as $error): ?>
+                        <p> - <?php echo $error; ?></p>
+                    <?php endforeach; ?>
+                </div>
+            <?php endif; ?>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="ads-detail">
+                            <div class="account-overview">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <?php if(empty($this->success)):?>
+                                        <div id="form">
+                                            <form method="post">
+                                                <div class="col-sm-6 padding-control">
+                                                    <span class="fa fa-barcode form-control-feedback"></span>
+                                                    <input class="form-control" type="password" name="password" placeholder="Nhập mật khẩu mới">
+
+                                                </div>
+                                                <div class="col-sm-6 padding-control">
+                                                    <span class="fa fa-barcode form-control-feedback"></span>
+                                                    <input class="form-control" type="password" name="re-password" placeholder="Nhập lại mật khẩu mới">
+                                                </div>
+                                                <input type="submit" value="Xác nhận">
+                                            </form>
+                                        </div>
+                                        <?php endif;?>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="sidebar">
+
+                            <!--advertisement-->
+                            <div class="side-widget">
+                                <h4 class="inner-heading">ADVERTISEMENT</h4>
+                                <div class="side-widget-adv">
+                                    <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
+                                </div>
+                            </div><!--end advertisement widget-->
+
+                            <!--Tags-->
+                            <div class="side-widget">
+                                <h4 class="inner-heading">Tags</h4>
+                                <div class="tags">
+                                    <a href="#">Ads</a>
+                                    <a href="#">Design</a>
+                                    <a href="#">Classified</a>
+                                    <a href="#">PSD’s</a>
+                                    <a href="#">Advertisement</a>
+                                    <a href="#">Jobs</a>
+                                    <a href="#">Community</a>
+                                    <a href="#">Business</a>
+                                    <a href="#">Interior</a>
+                                    <a href="#">Condo</a>
+                                    <a href="#">Pet</a>
+                                    <a href="#">Shopping</a>
+                                    <a href="#">Clothing</a>
+                                    <a href="#">Vehicles</a>
+
+
+                                </div>
+                            </div><!--end tags widget-->
+                        </div>
+                    </div>
+                </div>
             </div>
-        <?php endif; ?>
-        <?php if ($this->success):
-            ?>
-            <div class="alert alert-success alert-block fade in">
-                <h4><i class="icon-ok-sign"></i> Hoàn tất!</h4>
-                <p>- <?php echo $this->success; ?></p>
-            </div>
-        <?php endif; ?>
-        <?php if(!$this->success):?>
-        <form method="POST">
-            <input type="password" name="strPassword"/><br/>
-            <input type="password" name="strRePassword"></br>
-            <button class="btn-pre" type="submit">  ĐỒNG Ý  </button>
-        </form>
-        <?php endif;?>
+        </section><!--end details-->
     </div>
-    <div style="clear: both;"></div>
-</div>
+</section>
