--- a/module/Frontend/view/v1/frontend/user/index.phtml
+++ b/module/Frontend/view/v1/frontend/user/index.phtml
@@ -21,32 +21,32 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
                         <i class="fa fa-times-circle"></i>
                     </button>
                     <h4><i class="fa fa-exclamation-triangle"></i> Lỗi!</h4>
-                    <?php foreach($this->errors as $error):?>
-                    <p> - <?php echo $error; ?></p>
-                    <?php endforeach;?>
+                    <?php foreach ($this->errors as $error): ?>
+                        <p> - <?php echo $error; ?></p>
+                    <?php endforeach; ?>
                 </div>
             <?php endif; ?>
 
             <?php
-            if ($this->success):
+            if ($this->flashMessenger()->setNamespace('edit-info-success')->getMessages()):
                 ?>
                 <div class="alert alert-success alert-block fade in">
                     <button class="close close-sm" type="button" data-dismiss="alert">
                         <i class="fa fa-times-circle"></i>
                     </button>
                     <h4><i class="fa fa-thumbs-o-up"></i> Hoàn tất!</h4>
-                    <p>- <?php echo $this->success; ?></p>
+                    <p>- <?php echo $this->flashMessenger()->setNamespace('edit-info-success')->getMessages()[0]; ?></p>
                 </div>
             <?php endif; ?>
 
             <div class="container">
                 <div class="row">
                     <?php echo $this->render('frontend/nav-user-left'); ?>
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <div class="ads-detail">
                             <div class="account-overview">
                                 <div class="row">
-                                    <div class="col-md-12">
+                                    <div class="col-md-12 border-detail">
                                         <div id="form">
                                             <form method="post">
                                                 <div class="row">
@@ -59,15 +59,13 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-8" style="overflow: hidden;">
-                                                        <div class="dl-horizontal">
-                                                            <dt>Tên:</dt>
-                                                            <dd><?php echo $arrDetailUser['user_fullname']; ?></dd>
-                                                            <dt>Email :</dt>
-                                                            <dd><?php echo $arrDetailUser['user_email']; ?></dd>
-                                                            <dt>Di động :</dt>
-                                                            <dd><?php echo $arrDetailUser['user_phone']; ?></dd>
-                                                        </div>
+                                                    <div class="col-md-8">
+                                                        <div class="col-md-5 form-group"><b>Họ và tên</b></div>
+                                                        <div class="col-md-7 form-group"><?php echo $arrDetailUser['user_fullname']; ?></div>
+                                                        <div class="col-md-5 form-group"><b>Email</b></div>
+                                                        <div class="col-md-7 form-group"><?php echo $arrDetailUser['user_email']; ?></div>
+                                                        <div class="col-md-5 form-group"><b>Số điện thoại</b></div>
+                                                        <div class="col-md-7 form-group"><?php echo $arrDetailUser['user_phone']; ?></div>
                                                     </div>
                                                 </div>
                                                 <div class="row">
@@ -84,7 +82,9 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
                                                         <div class="col-md-9"><input class="form-group" name="user_phone" value="<?php echo $arrDetailUser['user_phone']; ?>"></div>
                                                     </div>
                                                 </div>
-                                                <button type="submit" class="btn btn-primary pull-right">Thay đổi</button>
+                                                <div class="col-md-2 col-xs-offset-6 col-md-offset-8">
+                                                    <button type="submit" class="btn btn-primary">Xác nhận</button>
+                                                </div>
                                             </form>
                                         </div>
                                     </div>
@@ -92,7 +92,7 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <?php echo $this->render('frontend/nav-ads-right'); ?>
                     </div>
                 </div>
