--- a/static/f/v1/css/default.css
+++ b/static/f/v1/css/default.css
@@ -1774,3 +1774,4 @@ input[type="radio"]{
 .mg-bt-15 {
     margin-bottom: 15px
 }
+.border-detail{ padding-top:5px; padding-bottom: 5px; padding-right:10px; border:  1px solid #e1e1e1};
