--- a/module/Frontend/view/v1/frontend/user/recharge.phtml
+++ b/module/Frontend/view/v1/frontend/user/recharge.phtml
@@ -64,7 +64,7 @@
                                                 </div>
                                                 <div class="col-md-12 form-group">
                                                     <div class="col-md-3 form-group">
-                                                        <img class="img-captcha form-control" src=""/>
+                                                        <img class="img-captcha form-control" src="" style="height: 50px; width: 80px"/>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <input type="text" class="form-control" name="code_security" placeholder="Nhập mã bên cạnh">
