--- a/module/Frontend/view/v1/frontend/content/add.phtml
+++ b/module/Frontend/view/v1/frontend/content/add.phtml
@@ -18,7 +18,7 @@
                         <i class="fa fa-times-circle"></i>
                     </button>
                     <h4><i class="fa fa-exclamation-triangle"></i> Lỗi!</h4>
-                    <p> - <?php echo $error['total']; ?></p>
+                    <p> - <?php echo $errors['total']; ?></p>
                 </div>
             <?php endif; ?>
 
