--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -36,6 +36,11 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
     </head>
 
     <body>
+        <div id="loading-mask" style="left: -2px; top: 0px; width: 100%; height: 100%; display: none;">
+            <p id="loading_mask_loader" class="loader">
+                <img alt="Loading..." src="<?php echo STATIC_URL . '/f/v1/images/ajax-loader-tr.gif'; ?>">
+                <br>Please wait...</p>
+        </div>
         <!-- Google Tag Manager -->
 <!--        <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NWX2H4"
                           height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
