--- a/module/Frontend/view/v1/frontend/user/recharge.phtml
+++ b/module/Frontend/view/v1/frontend/user/recharge.phtml
@@ -44,7 +44,7 @@
                                 <div class="row">
                                     <div class="col-md-12 border-detail">
                                         <div id="form">
-                                            <form method="post">
+                                            <form method="post" id="form-recharge">
                                                 <div class="col-md-12 form-group">
                                                     <label for="type">Chọn loại thẻ</label>
                                                     <select class="form-group" name="type">
