--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -27,11 +27,11 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         ?>
 
         <script type="application/ld+json">
-            {
-            "@context": "http://schema.org",
-            "@type": "Organization",
-            "url": "<?php echo $this->serverUrl(); ?>",
-            }
+//            {
+//            "@context": "http://schema.org",
+//            "@type": "Organization",
+//            "url": "<?php // echo $this->serverUrl(); ?>",
+//            }
         </script>
     </head>
 
@@ -57,20 +57,20 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
             })(window, document, 'script', 'dataLayer', 'GTM-NWX2H4');</script>-->
         <!-- End Google Tag Manager -->
         <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-65285980-1', 'auto');
-            ga('send', 'pageview');
+//            (function (i, s, o, g, r, a, m) {
+//                i['GoogleAnalyticsObject'] = r;
+//                i[r] = i[r] || function () {
+//                    (i[r].q = i[r].q || []).push(arguments)
+//                }, i[r].l = 1 * new Date();
+//                a = s.createElement(o),
+//                        m = s.getElementsByTagName(o)[0];
+//                a.async = 1;
+//                a.src = g;
+//                m.parentNode.insertBefore(a, m)
+//            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+//
+//            ga('create', 'UA-65285980-1', 'auto');
+//            ga('send', 'pageview');
         </script>
         <!--Start Header section-->
         <?php echo $this->render('frontend/header'); ?>
