--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -6,32 +6,50 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
     <head>
         <?php echo $this->headTitle(); ?>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta http-equiv="content-language" content="vi" />
-        <!--<meta name="robots" content="INDEX, FOLLOW" />-->
-        <meta http-equiv="Expires" content="0" />
-        <meta name='revisit-after' content='1 days' />
         <meta http-equiv="REFRESH" content="1200" />
         <link rel="shortcut icon" href="<?php echo STATIC_URL; ?>/f/v1/images/icon.png" type="image/x-icon" />
-        <script type="text/javascript">
-            var baseurl = '<?php echo $this->serverUrl(); ?>';
-            var module = '<?php echo MODULE; ?>';
-            var staticurl = '<?php echo STATIC_URL; ?>';
-            var fullname = '<?php echo FULLNAME; ?>';
-            var role = '<?php echo USER_ROLE; ?>';
-            var captchaURL = '<?php echo $this->serverUrl() . $this->Url('captcha', array('controller' => 'captcha', 'action' => 'index')) ?>';
-        </script>        
         <?php
         echo $this->headMeta();
+        ?>
+        <meta name="dc.publisher" content="<?php echo My\General::SITE_AUTH; ?>" />
+        <meta name="dc.rights.copyright" content="<?php echo My\General::SITE_AUTH; ?>" />
+        <meta name="dc.creator.name" content="<?php echo My\General::SITE_AUTH; ?>" />
+        <meta name="dc.creator.email" content="<?php echo My\General::EMAIL_SYS ?>" />
+        <meta name="dc.identifier" content="http://dev.raovat.vn" />
+        <meta name="copyright" content="<?php echo My\General::SITE_AUTH; ?>" />
+        <meta name="author" content="<?php echo My\General::SITE_AUTH; ?>" />
+        <meta name="dc.language" content="vi-VN" />
+        <meta name="robots" content="INDEX, FOLLOW" />
+        <meta http-equiv="content-language" content="vi" />
+        <!--<meta name="DC.title" content="" />-->
+        <meta name="geo.region" content="VN-31" />
+        <meta name="geo.placename" content="Quy Nhơn" />
+        <meta name="geo.position" content="13.770044;109.234571" />
+        <meta name="ICBM" content="13.770044, 109.234571" />
+        <meta http-equiv="Expires" content="0" />
+        <meta name='revisit-after' content='1 days' />
+        <link rel="alternate" href="http://quynhon247.com" hreflang="vi-vn" />
+        <meta content="VnExpress" property="og:site_name" />
+        <meta content="website" property="og:type" />
+
+        <script type="text/javascript">
+            var baseurl = '<?php echo $this->serverUrl(); ?>';
+            var staticurl = '<?php echo STATIC_URL; ?>';
+            var fullname = '<?php echo CUSTOMER_FULLNAME; ?>';
+            var captchaURL = '<?php echo $this->serverUrl() . $this->Url('captcha', array('controller' => 'captcha', 'action' => 'index')) ?>';
+        </script>
+        
+        <?php
         echo $this->headLink();
         echo $this->headScript();
         ?>
 
         <script type="application/ld+json">
-//            {
-//            "@context": "http://schema.org",
-//            "@type": "Organization",
-//            "url": "<?php // echo $this->serverUrl(); ?>",
-//            }
+            //            {
+            //            "@context": "http://schema.org",
+            //            "@type": "Organization",
+            //            "url": "<?php // echo $this->serverUrl();         ?>",
+            //            }
         </script>
     </head>
 
